fixed z-index

--- a/src/components/ProfilePage/components/ProfileListProofs/components/ProfileProofBlock/ProfileProofBlock.module.scss
+++ b/src/components/ProfilePage/components/ProfileListProofs/components/ProfileProofBlock/ProfileProofBlock.module.scss
@@ -18,11 +18,6 @@
     background-image: url("images/fire.svg");
     background-repeat: no-repeat;
     background-position: bottom -70px right -40px;
-    & * {
-        position: relative;
-        z-index: 2;
-    }
-
     &:hover {
         box-shadow: 8px 8px 15px rgba(185, 145, 250, 0.5),
             inset 5px 5px 10px #111111;
